Fix some jumpy CSS animations

--- a/src/styles/pdfView.css
+++ b/src/styles/pdfView.css
@@ -96,15 +96,16 @@ html[data-scrollbars="hidden"] .panel-widget-1::-webkit-scrollbar {
 .panel-widget-controls {
   box-sizing:border-box;
   height:100%;
-  position:absolute;
-  right:0px;
-  background:var(--content-background);
-  width:calc(var(--widget-control-width)); 
+  position:fixed;
+  right:calc(-1 * (1 - min(1,var(--chatVisible) + var(--listingVisible))) * var(--widget-control-width));
+  background:white;
+  width:var(--widget-control-width); 
   border-left:1px solid #adadad;
   display:flex;
   flex-direction:column;
   gap:10px;
   align-items:center;
+  transition: right .25s ease;
 }
 
 .panel-widget-controls > button {
@@ -158,6 +159,10 @@ html[data-scrollbars="hidden"] .panel-widget-1::-webkit-scrollbar {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+
+    .panel-widget-controls {
+      right: 0px;
+    }
 
     .panel-widget-2 {
       left: calc(var(--chatVisible) * var(--widget-1-width));
